networkpolicy/demo/monitor/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monitor
  template:
    metadata:
      labels:
        app: monitor
    spec:
      serviceAccountName: monitor-sa
      containers:
      - name: monitor
        image: ghcr.io/mcbtaguiad/istio-demo/monitor:main
        ports:
        - containerPort: 8000
