networkpolicy/demo/monitor/base/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: monitor-route
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /status
      backendRefs:
        - name: monitor
          port: 8000
